--- a/jogos/FROGGER/index.html
+++ b/jogos/FROGGER/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Frogger</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js" defer></script>
     <script src="app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js" defer></script>
 </head>
-
 <body>
     <header style="text-align:center; margin-top:1rem;">
         <img class="titulo" src="images/titulo.png" />
@@ -21,6 +20,6 @@
     <main>
         <div id="grid" aria-label="Tabuleiro do jogo Frogger" role="grid"></div>
     </main>
+    <div id="joystick" aria-hidden="true"></div>
 </body>
-
 </html>
