--- a/jogos/PACMAN/index.html
+++ b/jogos/PACMAN/index.html
@@ -15,6 +15,31 @@
         <h3>Score: <span id="score">0</span></h3>
         <h3>Level: <span id="level"></span></h3>
     </div>
+
+    <!-- D‑pad com SVG inline -->
+    <div id="dpad" aria-label="Controle direcional" role="navigation">
+        <button class="dpad-btn up" data-dir="up" aria-label="Mover para cima" title="Cima" type="button">
+            <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true" focusable="false">
+                <polygon points="12,4 20,16 4,16" fill="white" />
+            </svg>
+        </button>
+        <button class="dpad-btn left" data-dir="left" aria-label="Mover para esquerda" title="Esquerda" type="button">
+            <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true" focusable="false">
+                <polygon points="4,12 16,4 16,20" fill="white" />
+            </svg>
+        </button>
+        <button class="dpad-btn right" data-dir="right" aria-label="Mover para direita" title="Direita" type="button">
+            <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true" focusable="false">
+                <polygon points="20,12 8,4 8,20" fill="white" />
+            </svg>
+        </button>
+        <button class="dpad-btn down" data-dir="down" aria-label="Mover para baixo" title="Baixo" type="button">
+            <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true" focusable="false">
+                <polygon points="12,20 4,8 20,8" fill="white" />
+            </svg>
+        </button>
+    </div>
+
 </body>
 
 </html>
